@@ -1,5 +1,5 @@
 Major:
-- Complete the lexer
+- Use radix for floats in the lexer
 - Number coercing and printing
 - System signal handling
 - Use non-block I/O
